--- a/custom.html
+++ b/custom.html
@@ -3,11 +3,11 @@
 
 <head>
 
-    <link href="thumb.png" type="image/png" rel="icon"></link>
+    <link href="$.CustomPath.$/thumb.png" type="image/png" rel="icon"></link>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-    <link href="css/custom.css" rel="stylesheet">
+    <link href="$.CustomPath.$/css/custom.css" rel="stylesheet">
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 
     <title>Untangle WiFi Login</title>
